manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-app-service
spec:
  selector:
    app: example-app-deployment
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
