manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-app-ingress
spec:
  tls:
  - hosts:
    - deepakdev.me
    secretName: example-app-secret-key
  rules:
  - host: deepakdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: example-app-service
            port:
              number: 3000
